--- a/back/.env.example
+++ b/back/.env.example
@@ -1,6 +1,6 @@
 PORT = port
 DB_HOST = db_host
 DB_PORT = db_port
-DB_USER = db_user
+DB_USERNAME = db_username
 DB_PASSWORD = db_password
-DB_NAME = db_name
+DB_NAMEDB = db_name
